# pygithub-mcp-server

./: .clinerules  .coverage  .env.test  .gitignore  CHANGELOG.md  Dockerfile  README.md  coverage_report.html  coverage_report.json  implementation_status.md  pyproject.toml  smithery.yaml  test_results.json  test_results_integration_client.json
archive/: Dockerfile  pyproject.toml
archive/github/: __init__.py  cli.py  server.py
archive/github/common/: errors.py  types.py
archive/github/operations/: __init__.py  branches.py  commits.py  files.py  pulls.py  repository.py  search.py
docs/: active_context.md  custom_instructions.md  pr_396.md  product_context.md  progress.md  project_brief.md  system_patterns.md  tech_context.md  test_failure_resolution_plan.md  test_improvement_plan.md
docs/PyGithub/: sitemap.md
docs/PyGithub-Archive/archive/api/: index.md
docs/PyGithub-Archive/archive/api/objects/: PullRequest.md
docs/PyGithub-Archive/archive/api/objects/core/: Repository.md
docs/PyGithub-Archive/archive/api/objects/issues/: Milestone.md
docs/PyGithub-Archive/archive/core/: github.md  github_integration.md
docs/PyGithub-Archive/archive/examples/: Authentication.md  Branch.md  Issue.md  Milestone.md  PullRequest.md
docs/PyGithub-Archive/archive/reference/: index.md
docs/PyGithub/api/objects/: Repository.md
docs/PyGithub/api/objects/core/: Branch.md
docs/PyGithub/api/objects/issues/: Issue.md
docs/PyGithub/api/objects/projects/: Project.md
docs/PyGithub/api/objects/pulls/: PullRequest.md
docs/PyGithub/examples/: Commit.md  MainClass.md  Repository.md  Webhook.md  index.md
docs/PyGithub/guides/: introduction.md
docs/adr/: 002_real_api_testing.md  006_modular_tool_architecture.md  007_pydantic_first_architecture.md
docs/guides/: error-handling.md  security.md  tool-reference.md
docs/testing/: github_tools_test_report.md  mocking_patterns.md  modular_architecture_testing.md  testing_strategy.md
scripts/: README.md  analyze_coverage.py
scripts/coverage/: __init__.py  __main__.py  reports.py  runner.py
src/github_mcp_server/: __main__.py  server.py
src/github_mcp_server/common/: github.py  version.py
src/github_mcp_server/operations/: issues.py
src/pygithub_mcp_server/: __init__.py  __main__.py  server.py  version.py
src/pygithub_mcp_server/client/: client.py  rate_limit.py
src/pygithub_mcp_server/common/: __init__.py  converters.py  errors.py  github.py  types.py  utils.py  version.py
src/pygithub_mcp_server/config/: settings.py
src/pygithub_mcp_server/converters/: parameters.py  responses.py
src/pygithub_mcp_server/converters/common/: datetime.py
src/pygithub_mcp_server/converters/issues/: issues.py
src/pygithub_mcp_server/errors/: exceptions.py  handlers.py
src/pygithub_mcp_server/operations/: issues.py  repositories.py
src/pygithub_mcp_server/schemas/: base.py  issues.py  repositories.py  responses.py
src/pygithub_mcp_server/tools/: __init__.py
src/pygithub_mcp_server/tools/issues/: tools.py
src/pygithub_mcp_server/utils/: environment.py
tests/: conftest.py  test_converters.py  test_error_handling.py  test_github_client.py  test_github_client_test_mode.py  test_utils.py
tests/integration/: README.md  conftest.py  test_server.py
tests/integration/client/: test_rate_limit.py
tests/integration/issues/: test_comments.py  test_create.py  test_issue_tools.py  test_lifecycle.py  test_list.py  test_update.py
tests/integration/operations/issues/: test_comments.py  test_labels.py  test_list.py  test_parameter_validation.py
tests/integration/operations/repositories/: test_repositories_integration.py
tests/integration/tools/issues/: test_error_cases.py  test_issue_tools.py
tests/integration/tools/repositories/: test_repositories_tools_integration.py
tests/schemas/: __init__.py  test_issues.py  test_issues_complete.py
tests/server/: README.md  conftest.py  test_server.py
tests/test_operations/: test_issues.py
tests/unit/: test_main.py
tests/unit/config/: test_settings.py
tests/unit/converters/: test_parameters.py  test_responses.py
tests/unit/converters/common/: test_datetime.py
tests/unit/operations/: test_repositories.py  test_repositories_ops.py
tests/unit/tools/repositories/: test_repositories_tools.py  test_repositories_tools_edge_cases.py  test_repository_tools.py
