[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygithub-mcp-server"
version = "0.1.0"
description = "GitHub MCP Server using PyGithub"
requires-python = ">=3.10"
dependencies = [
    "PyGithub>=2.1.1",
    "mcp>=1.1.3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
    --cov=src/pygithub_mcp_server
    --cov-report=term-missing
    --cov-report=html
    --cov-branch
    -v
"""
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
branch = true
source = ["src/pygithub_mcp_server"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.coverage.html]
directory = "coverage_html"
